Just use the image skia from resouce bundle for default app icon.

Another issue similar to 605884.

BUG=614992
R=benwells@chromium.org

Review-Url: https://codereview.chromium.org/2012273002
Cr-Commit-Position: refs/heads/master@{#397040}

Former-commit-id: b801ad2f00aff615076a2a1c22d76b68e61ae687